Closed Bug 333025 Opened 18 years ago Closed 18 years ago

Three relatively frequent mozilla/accessible crashes in talkback

Categories

(Core :: Disability Access APIs, defect)

x86
Windows XP
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: aaronlev, Assigned: aaronlev)

References

Details

(5 keywords)

Attachments

(1 file)

Attachment #217449 - Flags: superreview?(neil) → superreview+
Summary: Three relatively mozilla/accessible crashes in talkback → Three relatively frequent mozilla/accessible crashes in talkback
Attachment #217449 - Flags: review?(pilgrim) → review+
Comment on attachment 217449 [details] [diff] [review]
Improved null checks (whitespace changes removed) . In one case I still don't know how it happens, but hopefully the assertion will help us catch it in a debug build at some point.

Ginn, I shouldn't a= my own patches.
Attachment #217449 - Flags: approval-branch-1.8.1?(ginn.chen)
Attachment #217449 - Flags: approval1.8.0.2?
Blocks: fox2access
Comment on attachment 217449 [details] [diff] [review]
Improved null checks (whitespace changes removed) . In one case I still don't know how it happens, but hopefully the assertion will help us catch it in a debug build at some point.

a=me
Attachment #217449 - Flags: approval-branch-1.8.1?(ginn.chen) → approval-branch-1.8.1+
Comment on attachment 217449 [details] [diff] [review]
Improved null checks (whitespace changes removed) . In one case I still don't know how it happens, but hopefully the assertion will help us catch it in a debug build at some point.

1.8.0.2 is done, moving aaron's request to 1.8.0.3
Attachment #217449 - Flags: approval1.8.0.2? → approval1.8.0.3?
Status: NEW → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
Keywords: fixed1.8.1
Comment on attachment 217449 [details] [diff] [review]
Improved null checks (whitespace changes removed) . In one case I still don't know how it happens, but hopefully the assertion will help us catch it in a debug build at some point.

approved for 1.8.0 branch, a=dveditz for drivers
Attachment #217449 - Flags: approval1.8.0.3? → approval1.8.0.3+
Checking in src/base/nsDocAccessible.cpp;
/cvsroot/mozilla/accessible/src/base/nsDocAccessible.cpp,v  <--  nsDocAccessible.cpp
new revision: 1.73.2.6.2.1; previous revision: 1.73.2.6
done
Checking in src/msaa/nsDocAccessibleWrap.cpp;
/cvsroot/mozilla/accessible/src/msaa/nsDocAccessibleWrap.cpp,v  <--  nsDocAccessibleWrap.cpp
new revision: 1.30.2.4.2.1; previous revision: 1.30.2.4
done
Keywords: fixed1.8.0.3
Keywords: crash
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: