Bug 333025. Three relatively frequent mozilla/accessible crashes in talkback. r=pilgrim, sr=neil